--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <title>Test</title>
-    <script src='https://salebot.pro/js/salebot.js' charset='utf-8'></script><script>  SaleBotPro.init({    onlineChatId: '759'  });</script>
+<script src='https://salebot.pro/js/salebot.js' charset='utf-8'></script>
+<script>
+  SaleBotPro.init({
+    onlineChatId: ''
+  });
+</script>
   </head>
   <body>
     <header>
